--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -10,10 +10,11 @@
   "author": "Leonardo Lopes",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "mysql": "^2.18.1"
+    "mysql2": "^3.5.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
