--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -13,7 +13,9 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.5.2"
   },
   "devDependencies": {
